fix align of nested data table, react-component/table#25

--- a/style/components/table.less
+++ b/style/components/table.less
@@ -285,6 +285,13 @@
     &-collapsed:after {
       content: '+';
     }
+
+    &-expand-icon&-spaced {
+      visibility: hidden;
+      &:after {
+        content: '.';
+      }
+    }
   }
   tr&-expanded-row {
     &,
